--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Add authToken to .npmrc
-        run: echo "//npm.pkg.github.com/:_authToken${{ secrets.GITHUB_TOKEN }}" >> .npmrc  
+        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> .npmrc  
 
       # Login to GitHub Container Registry
       - name: Login to GitHub Container Registry
